// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for all general components in app Render correctly component BackgroundBase 1`] = `
<View
  onLayout={[Function]}
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Object {
        "backgroundColor": "#D2D5DD",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      source={Object {}}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": "100%",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`Snapshot test for all general components in app Render correctly component Button 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#E8EBE4",
      "borderRadius": 10,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#82816D",
        "fontSize": 24.75,
        "padding": 10,
      }
    }
  >
    BUTTON
  </Text>
</View>
`;

exports[`Snapshot test for all general components in app Render correctly component ButtonBorderLine 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#82816D",
      "borderRadius": 10,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#82816D",
        "fontSize": 24.75,
        "padding": 10,
      }
    }
  >
    BUTTON
  </Text>
</View>
`;

exports[`Snapshot test for all general components in app Render correctly component Line 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#C8C8C8",
      "height": 1,
      "width": "100%",
    }
  }
/>
`;

exports[`Snapshot test for all general components in app Render correctly component modal 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(50, 50, 50,0.4)",
        "flex": 1,
      }
    }
  />
</Modal>
`;

exports[`Snapshot test for components in page Cart Render correctly component CardProduct 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "marginBottom": 10,
      "paddingLeft": 3,
      "paddingTop": 3,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 10,
        "elevation": 5,
        "overflow": "hidden",
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://images.unsplash.com/photo-1580378403671-1b9fccdabafa?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=200&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=80&w=200",
        }
      }
      style={
        Object {
          "backgroundColor": "#f1eff0",
          "height": 150,
          "width": 150,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#82816D",
          "fontSize": 22,
          "marginHorizontal": 5,
        }
      }
    >
      est
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 20,
            "fontWeight": "bold",
            "marginHorizontal": 5,
          }
        }
      >
        $3,767
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 35,
            "justifyContent": "space-between",
            "overflow": "hidden",
            "width": 85,
          }
        }
      >
        <View
          accessible={true}
          focusable={false}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#999AC6",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "anticon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text>
          1
        </Text>
        <View
          accessible={true}
          focusable={false}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#999AC6",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "anticon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 5,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#999AC6",
            "fontSize": 24,
          },
          undefined,
          Object {
            "fontFamily": "anticon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Snapshot test for components in page Cart Render correctly component CartLayout 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#82816D",
        "fontSize": 85.5,
        "fontWeight": "bold",
        "paddingHorizontal": 16,
        "textAlign": "center",
      }
    }
  >
    Carrito
  </Text>
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 24,
      }
    }
  >
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View />
    </RCTScrollView>
  </View>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#B8BACF",
        "flexDirection": "row",
        "height": 40,
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 24.75,
          "fontWeight": "500",
        }
      }
    >
      COMPRAR
    </Text>
  </View>
</View>
`;

exports[`Snapshot test for components in page Cart Render correctly component EndButtonBuy 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#B8BACF",
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 24.75,
        "fontWeight": "500",
      }
    }
  >
    
  </Text>
</View>
`;

exports[`Snapshot test for components in page Category Render correctly component CardProductCategory 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderRadius": 10,
      "elevation": 3,
      "height": 420,
      "margin": 10,
      "overflow": "hidden",
      "width": 300,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://images.unsplash.com/photo-1580378403671-1b9fccdabafa?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=200&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=80&w=200",
      }
    }
    style={
      Object {
        "height": 300,
        "width": 300,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#82816D",
        "fontSize": 24.75,
        "fontWeight": "500",
        "marginLeft": 5,
      }
    }
  >
    est
  </Text>
  <Text
    style={
      Object {
        "color": "#82816D",
        "fontSize": 24.75,
        "fontWeight": "500",
        "marginLeft": 5,
      }
    }
  >
    $ 3,767
  </Text>
  <Text
    style={
      Object {
        "color": "#82816D",
        "fontSize": 24.75,
        "fontWeight": "500",
        "marginLeft": 5,
      }
    }
  >
    Stok: 
    839
  </Text>
  <View
    style={
      Object {
        "bottom": 10,
        "position": "absolute",
        "right": 10,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "red",
            "fontSize": 24,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 20,
        "height": 35,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 10,
        "top": 10,
        "width": 35,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#999AC6",
            "fontSize": 24,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Snapshot test for components in page Category Render correctly component CategoryLayout 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderBottomLeftRadius": 20,
        "borderBottomRightRadius": 20,
        "elevation": 5,
        "flex": 0.8,
        "marginHorizontal": 16,
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 16,
        }
      }
    >
      <RCTScrollView
        ItemSeparatorComponent={[Function]}
        disableVirtualization={false}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onContentSizeChange={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View />
      </RCTScrollView>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "alignItems": "center",
          }
        }
        disableVirtualization={false}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={2}
        onContentSizeChange={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View />
      </RCTScrollView>
      <View
        accessible={true}
        focusable={false}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#999AC6",
            "borderRadius": 25,
            "bottom": 50,
            "elevation": 5,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "right": 10,
            "width": 50,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 24,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 0.2,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "padding": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#82816D",
            "fontSize": 24.75,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Ordenar por
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-around",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 10,
                "color": "#82816D",
                "elevation": 3,
                "fontSize": 24.75,
                "fontWeight": "bold",
                "margin": 10,
                "padding": 10,
              }
            }
          >
            Precio
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 10,
                "color": "#82816D",
                "elevation": 3,
                "fontSize": 24.75,
                "fontWeight": "bold",
                "margin": 10,
                "padding": 10,
              }
            }
          >
            Disponibilidad
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 10,
                "color": "#82816D",
                "elevation": 3,
                "fontSize": 24.75,
                "fontWeight": "bold",
                "margin": 10,
                "padding": 10,
              }
            }
          >
            Cantidad
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      focusable={false}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#B8BACF",
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "space-between",
          "opacity": 1,
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 24,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          ﵂
        </Text>
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 24.75,
              "fontWeight": "500",
            }
          }
        >
          0
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 24.75,
              "fontWeight": "500",
            }
          }
        >
          IR AL CARRITO
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 24,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Snapshot test for components in page Category Render correctly component EndButtonCart 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#B8BACF",
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 24,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      ﵂
    </Text>
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 24.75,
          "fontWeight": "500",
        }
      }
    >
      0
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 24.75,
          "fontWeight": "500",
        }
      }
    >
      IR AL CARRITO
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 24,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Snapshot test for components in page Category Render correctly component ModalFilter 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(50, 50, 50,0.4)",
        "flex": 1,
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "opacity": 1,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "flex": 1,
          "marginHorizontal": 16,
          "padding": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#82816D",
            "fontSize": 34.875,
            "textAlign": "center",
          }
        }
      >
        Filtrar por
      </Text>
      <Text
        style={
          Object {
            "color": "#82816D",
            "fontSize": 28.35,
            "marginVertical": 10,
          }
        }
      >
        Disponibilidad
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-around",
            "marginVertical": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": "#82816D",
              "borderRadius": 10,
              "borderWidth": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#82816D",
                "fontSize": 24.75,
                "padding": 10,
              }
            }
          >
            DISPONIBLE
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": "#82816D",
              "borderRadius": 10,
              "borderWidth": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#82816D",
                "fontSize": 24.75,
                "padding": 10,
              }
            }
          >
            NO DISPONIBLE
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#82816D",
            "fontSize": 28.35,
            "marginVertical": 10,
          }
        }
      >
        Cantidad
      </Text>
      <Text
        style={
          Object {
            "color": "#82816D",
            "fontSize": 24.75,
            "textAlign": "center",
          }
        }
      >
        0
      </Text>
      <View>
        <RNCSlider
          disabled={false}
          enabled={true}
          inverted={false}
          maximumValue={1000}
          minimumTrackTintColor="#999AC6"
          minimumValue={0}
          onChange={[Function]}
          onRNCSliderSlidingComplete={null}
          onRNCSliderSlidingStart={null}
          onRNCSliderValueChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          step={0}
          style={
            Array [
              Object {
                "height": 40,
              },
              Object {
                "height": 40,
                "width": "100%",
              },
            ]
          }
          thumbImage={null}
          thumbTintColor="#999AC6"
          value={0}
        />
      </View>
      <Text
        style={
          Object {
            "color": "#82816D",
            "fontSize": 28.35,
            "marginVertical": 10,
          }
        }
      >
        Precio
      </Text>
      <Text
        style={
          Object {
            "color": "#82816D",
            "fontSize": 24.75,
            "textAlign": "center",
          }
        }
      >
        $ 0
      </Text>
      <View>
        <RNCSlider
          disabled={false}
          enabled={true}
          inverted={false}
          maximumValue={50000}
          minimumTrackTintColor="#999AC6"
          minimumValue={0}
          onChange={[Function]}
          onRNCSliderSlidingComplete={null}
          onRNCSliderSlidingStart={null}
          onRNCSliderValueChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          step={0}
          style={
            Array [
              Object {
                "height": 40,
              },
              Object {
                "height": 40,
                "width": "100%",
              },
            ]
          }
          thumbImage={null}
          thumbTintColor="#999AC6"
          value={0}
        />
      </View>
      <View
        style={
          Object {
            "marginTop": 16,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#E8EBE4",
              "borderRadius": 10,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#82816D",
                "fontSize": 24.75,
                "padding": 10,
              }
            }
          >
            FILTRAR
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Snapshot test for components in page Category Render correctly component OptionOrderShip 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 10,
        "color": "#82816D",
        "elevation": 3,
        "fontSize": 24.75,
        "fontWeight": "bold",
        "margin": 10,
        "padding": 10,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`Snapshot test for components in page Category Render correctly component SubCategoriesShip 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 20,
        "color": "#82816D",
        "elevation": 3,
        "fontSize": 24.75,
        "fontWeight": "bold",
        "margin": 10,
        "padding": 10,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`Snapshot test for components in page Home Render correctly component CardCategory 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 266.8,
      "opacity": 1,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Object {
        "height": 266.8,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 34.875,
        "fontWeight": "500",
        "left": 16,
        "position": "absolute",
        "top": 106.72,
      }
    }
  >
    Almuerzos
  </Text>
</View>
`;

exports[`Snapshot test for components in page Home Render correctly component HomeLayout 1`] = `
<View
  onLayout={[Function]}
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Object {
        "backgroundColor": "#D2D5DD",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      source={Object {}}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": "100%",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "marginVertical": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#82816D",
              "fontSize": 85.5,
              "fontWeight": "bold",
            }
          }
        >
          El baratón
        </Text>
        <Text
          style={
            Object {
              "color": "#82816D",
              "fontSize": 34.875,
              "fontWeight": "500",
            }
          }
        >
          ¡Los mejores precios!
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "white",
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "elevation": 5,
            "flex": 1,
            "marginHorizontal": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#82816D",
              "fontSize": 34.875,
              "fontWeight": "500",
              "marginVertical": 10,
              "textAlign": "center",
            }
          }
        >
          Categorias
        </Text>
        <RCTScrollView
          disableVirtualization={false}
          getItem={[Function]}
          getItemCount={[Function]}
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          numColumns={1}
          onContentSizeChange={[Function]}
          onEndReachedThreshold={2}
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          updateCellsBatchingPeriod={50}
          viewabilityConfigCallbackPairs={Array []}
          windowSize={21}
        >
          <View />
        </RCTScrollView>
      </View>
    </View>
  </View>
</View>
`;
